:white_check_mark: fix certifications page align

--- a/styles/components/InputButton.module.css
+++ b/styles/components/InputButton.module.css
@@ -1,53 +1,50 @@
 .buttonBox {
-    font-size: 62.5%; /* 1rem = 10px*/
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 1em;
-    /* identical to box height */
+  font-size: 62.5%; /* 1rem = 10px*/
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 1em;
+  /* identical to box height */
 
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #21201e;
+  color: #21201e;
 
-    margin: 0;
-    background: #fef3de;
-    border: none;
-    border-radius: 13px;
+  margin: 0;
+  background: #fef3de;
+  border: none;
+  border-radius: 13px;
 
-    padding: 1rem 2.2rem;
-    width: fit-content;
+  padding: 1rem 2.2rem;
+  width: fit-content;
 }
 
 .buttonBox:hover {
-    transform: scale(1.1);
-    transition-duration: 0.2s;
+  transform: scale(1.1);
+  transition-duration: 0.2s;
 }
 
 .buttonBox:active {
-    transform: scale(1);
-    transition-duration: 0.1s;
+  transform: scale(1);
+  transition-duration: 0.1s;
 }
 
 .inputBox {
-    font-size: 62.5%; /* 1rem = 10px*/
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 1em;
-    /* identical to box height */
+  font-size: 62.5%; /* 1rem = 10px*/
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 1em;
+  /* identical to box height */
 
-    display: flex;
-    align-items: center;
-    text-align: left;
-    color: #21201e;
+  display: flex;
+  align-items: center;
+  text-align: left;
+  color: #21201e;
 
-    margin-bottom: 2.5em;
-    background: #fef3de;
-    border: none;
-    border-radius: 13px;
+  margin-bottom: 2.5em;
+  background: #fef3de;
+  border: none;
+  border-radius: 13px;
 
-    padding: 1em 1.5em;
-    width: 20em;
+  padding: 1em 1.5em;
+  width: 27.5em;
 }
